--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 async-std = "1.12.0"
 futures = "0.3.30"
 rocket = "0.5.0"
+serde = "1.0.198"
+serde_yaml = "0.9.34"
 tokio = "1.37.0"
