--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2021"
 
 [dependencies]
 async-std = "1.12.0"
+chrono = "0.4.38"
+cron = "0.12.1"
 csscolorparser = "0.6.2"
 futures = "0.3.30"
+lazy_static = "1.4.0"
 rocket = "0.5.0"
 serde = "1.0.198"
 serde_yaml = "0.9.34"
