--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "led_control"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,6 +10,7 @@ async-std = "1.12.0"
 chrono = "0.4.38"
 cron = "0.12.1"
 csscolorparser = "0.6.2"
+diesel = { version = "2.1.6", features = ["postgres"] }
 futures = "0.3.30"
 lazy_static = "1.4.0"
 rocket = "0.5.0"
