--- a/.github/workflows/relaese-on-version.yml
+++ b/.github/workflows/relaese-on-version.yml
@@ -1,16 +1,14 @@
-name: Docker Image CI
 
+
+name: Release on Version 
 on:
   push:
-    tags:
-      - 'v*'
+    tags: 
+      - "v*"
 
 jobs:
-
-  build:
-
+  build-for-ghcr:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Login to GHCR
@@ -20,6 +18,6 @@ jobs:
         username: ${{github.actor}}
         password: ${{secrets.GITHUB_TOKEN}}
     - name: Build & push the Docker image
-      run: docker build . --file Dockerfile --tag ghcr.io/ModerNews/led_control:${{github.ref_name}} |
-           docker push --tag ghcr.io/ModerNews/:${{github.ref_name}}
-          
+      run: docker build . --file Dockerfile --tag ghcr.io/modernews/led_control:${{github.ref_name}} |
+           docker push --tag ghcr.io/modernews/:${{github.ref_name}}
+
