--- a/.github/workflows/relaese-on-version.yml
+++ b/.github/workflows/relaese-on-version.yml
@@ -17,7 +17,12 @@ jobs:
         registry: ghcr.io
         username: ${{github.actor}}
         password: ${{secrets.GITHUB_TOKEN}}
-    - name: Build & push the Docker image
-      run: docker build . --file Dockerfile --tag ghcr.io/modernews/led_control:${{github.ref_name}} |
-           docker push --tag ghcr.io/modernews/:${{github.ref_name}}
-
+    - name: Build and push Docker images
+      # You may pin to the exact commit or the version.
+      # uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
+      uses: docker/build-push-action@v5.3.0
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: ghcr.io/modernews/led_control:${{github.ref_name}}
