--- a/.github/workflows/relaese-on-version.yml
+++ b/.github/workflows/relaese-on-version.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
     - name: Login to GHCR
       uses: docker/login-action@v3.1.0
       with:
@@ -18,8 +22,6 @@ jobs:
         username: ${{github.actor}}
         password: ${{secrets.GITHUB_TOKEN}}
     - name: Build and push Docker images
-      # You may pin to the exact commit or the version.
-      # uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
       uses: docker/build-push-action@v5.3.0
       with:
         context: .
