Fix permissions in realase Action

--- a/.github/workflows/relaese-on-version.yml
+++ b/.github/workflows/relaese-on-version.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   build-for-ghcr:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+      statuses: read 
     steps:
     - uses: actions/checkout@v4
     - name: Set up QEMU
